# transporthub

./: .editorconfig  .gitignore  .gitmodules
ConsoleFrontend/: ConsoleFrontend.sln
ConsoleFrontend/ConsoleFrontend/: ConsoleFrontend.csproj  Program.cs
Frontend/: Frontend.sln
Frontend/Frontend/: App.axaml  App.axaml.cs  Frontend.csproj  INavigationAwareViewModel.cs
Frontend/Frontend.Android/: Frontend.Android.csproj  MainActivity.cs
Frontend/Frontend.Browser/: Frontend.Browser.csproj  Program.cs
Frontend/Frontend.Desktop/: Frontend.Desktop.csproj  Program.cs  app.manifest
Frontend/Frontend.iOS/: AppDelegate.cs  Frontend.iOS.csproj  Info.plist  Main.cs
Frontend/TransportHub.Android/: LayoutListener.cs  MainActivity.cs  TransportHub.Android.csproj
Frontend/TransportHub.Api/: IAuthorizationService.cs  IDriverService.cs  IDriversLicenseService.cs  ILicenseTypeService.cs  IUsersService.cs  IVehicleService.cs  Serializer.cs  TransportHub.Api.csproj  UserType.cs
backend/: Cargo.toml  config.postgres.json  config.sqlite.json  transporthub.db  transporthub.db-shm  transporthub.db-wal
backend/src/: config.rs  db_model.rs  errors.rs  main.rs
backend/src/api/: mod.rs
backend/src/api/v1/: auth.rs  drivers.rs  drivers_licenses.rs  dto.rs  licenses.rs  middleware.rs  mod.rs  users.rs  vehicles.rs
backend/src/db_model/: mod.rs
backend/src/db_model/conf/: drivers.rs  drivers_licenses.rs  licenses.rs  mod.rs  user.rs  vehicles.rs
database/: transporthub.sql  transportie.sql
test_scripts/: auth.psm1  functions.psm1  users.ps1
(+239 files in other folders)
